# jotquote

./: .code-review-graphignore  .coveragerc  .flake8  .gitignore  .mcp.json  .travis.yml  API_REFERENCE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.rst  DEVELOPER_DOCUMENTATION.md  DEVELOPMENT.md  DOCUMENTATION.md  LICENSE.txt  LICENSES_THIRD_PARTY.txt  MANIFEST.in  PUBLISH.md  QUOTEMAP.md  README.md  README.rst  REVIEW.md  USER_DOCUMENTATION.md  dev-requirements.txt  pyproject.toml  setup.py  tox.ini
.claude/: settings.json
.github/workflows/: ci.yml
jotquote/: __init__.py  api.py  cli.py  lint.py  quotemap.py  web.py  web_editor.py  web_review.py  web_viewer.py
jotquote/api/: __init__.py  config.py  exceptions.py  lint.py  quote.py  selection.py  store.py
jotquote/cli/: __init__.py  cli.py
jotquote/resources/: quotes.txt  settings.conf  settings.legacy.conf
jotquote/templates/: _font_faces.html  _head_common.html  _theme_toggle.html  about.html  editor.html  quote.html  quotes.txt  review.html  settings.conf  settings.legacy.conf  unavailable.html
jotquote/web/: core.py  editor.py  helpers.py  viewer.py
plans/: 2026-03-12-migrate-to-uv.md  2026-03-13-remove-twine.md  2026-03-13-switch-to-waitress.md  2026-03-13-update-flask-werkzeug-python39.md  2026-03-14-cache-control-headers.md  2026-03-14-migrate-tests-to-pytest.md  2026-09-04-fullscreen-button.md  2026-11-04-update-readme-badges.md  2026-13-04-web-server-startup-logging.md  2026-13-05-add-unicode-ellipsis-lint-check.md  2026-13-05-remove-ascii-and-author-antipatterns-checks.md  2026-14-03-stars-display.md  2026-14-03-switch-to-ruff.md  2026-14-04-replace-quotemap-with-resolver.md  2026-14-05-about-page-provider-extension.md  2026-15-03-web-review-app.md  2026-15-04-new-hash-algorithm.md  2026-16-05-favicon-file-setting.md  2026-17-03-static-asset-cache-control.md  2026-17-04-restructure-jotquote-package.md  2026-19-03-quotemap-feature.md  2026-19-03-quotemap-rebuild.md  2026-19-04-rename-docs-and-add-api-reference.md  2026-19-04-replace-clickexception-with-api-hierarchy.md  2026-19-05-add-timezone-config-property.md  2026-19-05-reject-future-dates-on-date-route.md  2026-19-05-startup-log-timezone.md  2026-21-04-user-doc-settings-reorg.md  2026-21-05-add-json-api-route.md  2026-21-05-ajax-refresh-against-api.md  2026-22-03-address-pr17-review-comments.md  2026-22-03-light-dark-theme-toggle.md  2026-22-03-lint-subcommand.md  2026-26-03-lint-on-add.md  2026-28-03-address-pr17-review-comments.md  2026-30-03-address-pr-22-review-comments.md
popquote/: __init__.py  api.py  cli.py  web.py
tests/: __init__.py  api_pytest_test.py  api_quotemap_rebuild_test.py  api_test.py  cli_integration_test.py  cli_test.py  conftest.py  lint_test.py  quotemap_test.py  test_util.py  web_integration_test.py  web_integration_tests.py  web_review_integration_test.py  web_test.py  webserver_integration_test.py
tests/fixtures/: test_about_provider.py  test_header_provider.py  test_resolver.py
tests/integration/: conftest.py  test_cli.py  test_web_editor.py  test_web_viewer.py
tests/testdata/: quotes1.txt  quotes2.txt  quotes3.txt  quotes4.txt  quotes5.txt  quotes6.txt  quotes7.txt  quotes8.txt  quotes9.txt
tests/unit/: conftest.py  test_api.py  test_cli.py  test_quotemap_read.py  (+3 more)
(+17 files in other folders)
