[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jotquote"
dynamic = ["version"]
description = "A command-line interface for collecting and organizing quotes, and a quote of the day web server."
readme = "README.rst"
license = { text = "MIT License" }
authors = [
    { name = "Jake Kugel", email = "jake_kugel@yahoo.com" }
]
keywords = ["quotes"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.8.1"
dependencies = [
    "flask>=0.10.1",
    "click>=7.0",
]

[project.scripts]
jotquote = "jotquote.cli:main"

[tool.hatch.version]
path = "jotquote/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["jotquote"]
include = [
    "jotquote/templates/**",
    "jotquote/static/**",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mock>=5.0",
    "flake8>=6.0",
    "twine>=4.0",
    "coverage>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
