[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jotquote"
version = "0.9.5.dev0"
description = "A command-line interface for collecting and organizing quotes, and a quote of the day web server."
readme = "README.md"
license = { text = "MIT License" }
authors = [
    { name = "Jake Kugel", email = "jake_kugel@yahoo.com" }
]
keywords = ["quotes"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.9"
dependencies = [
    "flask>=3.1",
    "click>=8.0",
]

[project.scripts]
jotquote = "jotquote.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["jotquote"]
include = [
    "jotquote/templates/**",
    "jotquote/static/**",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff",
    "coverage>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
exclude = [".git", "__pycache__", ".venv"]

[tool.ruff.lint]
select = ["E", "W", "F", "N", "I", "Q"]
ignore = ["E501", "E722"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
